k8s/base/deployment-base-k8s.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: petclinic
