k8s/base/deployment-base-minikube.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: petclinic
