k8s/base/deployment-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic
---
apiVersion: networking.k8s.io/v1beta1
#apiVersion: networking.k8s.io/v1 Ingress
kind: Ingress
metadata:
  name: petclinic-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: petclinic-application
          servicePort: 8080
        path: /
