k8s/base/petclinic-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: petclinic-network-policy
  namespace: petclinic
spec:
  podSelector:
    matchLabels:
      petclinic-application: ""
  policyTypes:
    - Ingress
  ingress: []
